edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";

// Represents the content of the EF_GNSS_Places file, containing GNSS position records for
// accumulated driving periods.
//
// The file structure is specified in Appendix 2, Section 4.2.2.
//
//     EF GNSS_Places
//     └─GNSSAccumulatedDriving
//
// The data type `GNSSAccumulatedDriving` is specified in the Data Dictionary, Section 2.78.
//
// ASN.1 Specification:
//
//     GNSSAccumulatedDriving ::= SEQUENCE {
//         gnssADPointerNewestRecord INTEGER(0..NoOfGNSSADRecords-1),
//         gnssAccumulatedDrivingRecords SET SIZE(NoOfGNSSADRecords) OF GNSSAccumulatedDrivingRecord
//     }
message GnssPlaces {
  // Represents a single record of accumulated driving and GNSS position.
  //
  // The data type `GNSSAccumulatedDrivingRecord` is specified in the Data Dictionary, Section 2.79.
  //
  // ASN.1 Specification:
  //
  //     GNSSAccumulatedDrivingRecord ::= SEQUENCE {
  //         timeStamp TimeReal,
  //         gnssPlaceRecord GNSSPlaceRecord,
  //         vehicleOdometerValue OdometerShort
  //     }
  message Record {
    // Represents the nested GNSS position record.
    //
    // The data type `GNSSPlaceRecord` is specified in the Data Dictionary, Section 2.80.
    //
    // ASN.1 Specification:
    //
    //     GNSSPlaceRecord ::= SEQUENCE {
    //         timeStamp TimeReal,
    //         gnssAccuracy GNSSAccuracy,
    //         geoCoordinates GeoCoordinates
    //     }
    message GnssPlace {
      // Timestamp from the inner `GNSSPlaceRecord` structure.
      // See Data Dictionary, Section 2.80.
      google.protobuf.Timestamp timestamp = 1;

      // Accuracy of the GNSS fix. See DD Section 2.77.
      int32 gnss_accuracy = 2;

      // Longitude in millionths of a degree. See DD Section 2.76.
      sint32 longitude = 3;

      // Latitude in millionths of a degree. See DD Section 2.76.
      sint32 latitude = 4;
    }

    // Timestamp from the outer `GNSSAccumulatedDrivingRecord` structure.
    // See Data Dictionary, Section 2.79.
    google.protobuf.Timestamp timestamp = 1;

    // The nested GNSS place record.
    GnssPlace gnss_place = 2;

    // Odometer at the time of the record. See DD Section 2.113.
    int32 vehicle_odometer_km = 3;
  }

  // Index of the last updated record.
  int32 newest_record_index = 1;

  // The set of GNSS accumulated driving records.
  repeated Record records = 2;

  // Digital signature for the EF_GNSS_Places file content.
  bytes signature = 3;
}